# server/service/Abstractions/IAuthService.cs
@@ -12,4 +12,5 @@ public interface IAuthService
     
     UserData? GetUserInfo(ClaimsPrincipal principal);
     Task<GetAllUsersResponse> GetAllUsersResponse(SieveModel request);
+    Task<UserData> SetUserStatus(UpdateUserStatusDto dto);
 }
